# xposed-art-dump-dex

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/assets/: xposed_init
app/src/androidTest/java/cn/zaratustra/dumpdex/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_bridge.cpp
app/src/main/cpp/dex_dump/: DexDumper.cc  DexDumper.h
app/src/main/cpp/inline_hook/: inlineHook.c
app/src/main/java/cn/zaratustra/dumpdex/adapter/: AppData.kt  AppListAdapter.kt
app/src/main/java/cn/zaratustra/dumpdex/core/: AppInfoCenter.kt  DumpDexNative.java  HookMain.java
app/src/main/java/cn/zaratustra/dumpdex/utils/: ContextFinder.java  FileUtils.java
app/src/main/java/cn/zaratustra/dumpdex/view/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml  item_app.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/zaratustra/dumpdex/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
